--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -3,7 +3,8 @@
   "name": "@db",
   "version": "1.0.0",
   "scripts": {
-    "generate": "bunx drizzle-kit generate:sqlite",
+    "generate": "bunx drizzle-kit generate:sqlite && bun run build",
+    "build": "bun build ./drizzle/migrations.js --outfile ./migrations.js",
     "migrate": "bun run migration.ts"
   },
   "license": "ISC",
@@ -13,6 +14,8 @@
   "dependencies": {
     "@libsql/client": "0.4.2",
     "@paralleldrive/cuid2": "^2.2.2",
-    "drizzle-orm": "0.29.3"
+    "drizzle-orm": "0.29.3",
+    "expo-sqlite": "^13.2.2",
+    "text-encoding": "^0.7.0"
   }
 }
