--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@db": "workspace:*",
     "@types/react": "~18.2.45",
     "expo": "~50.0.6",
     "expo-status-bar": "~1.11.1",
