libsql: update version v0.22.22

--- a/apps/backend/libsql/Dockerfile
+++ b/apps/backend/libsql/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=$TARGETPLATFORM ghcr.io/tursodatabase/libsql-server:latest
+FROM --platform=$TARGETPLATFORM ghcr.io/tursodatabase/libsql-server:v0.22.22
 
 ARG TARGETPLATFORM
 
