--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -10,7 +10,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@db": "workspace:*'",
     "hono": "^3.12.9",
-    "@db": "workspace:*'"
+    "jose": "^5.2.2"
   }
 }
