backend: add delete endpoint for user

--- a/apps/backend/hanko/config.yml
+++ b/apps/backend/hanko/config.yml
@@ -1,4 +1,6 @@
-
+## https://github.com/teamhanko/hanko/blob/main/backend/docs/Config.md
+account:
+  allow_deletion: true
 database:
   database: passkey
   dialect: postgres
