backend: add new environment variables

--- a/apps/backend/env.sample
+++ b/apps/backend/env.sample
@@ -1,3 +1,7 @@
 PASSKEYS_URL=http://localhost:3000/passkeys
 # defined in hanko/config.yml
 PASSKEYS_SECRET_KEY=secret_keys_does_not_publish
+PASSKEYS_URL=http://localhost:8001
+PASSKEYS_ADMIN_URL=http://localhost:8034
+LIBSQL_URL=http://localhost:8000
+LIBSQL_ADMIN_URL=http://localhost:8033
