db: rename directory

--- a/packages/admin-db/package.json
+++ b/packages/admin-db/package.json
@@ -1,7 +1,7 @@
 {
-  "private": true,
   "name": "@db/admin",
   "version": "1.0.0",
+  "main": "./src/index.ts",
   "scripts": {
     "generate": "bunx drizzle-kit generate:sqlite"
   },
