--- a/packages/user-db/package.json
+++ b/packages/user-db/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "name": "@db/user",
   "version": "1.0.0",
+  "main": "src/index.ts",
   "scripts": {
     "generate": "bunx drizzle-kit generate:sqlite && bun run build",
     "build": "bun build ./drizzle/migrations.js --outfile ./dist/migrations.js"
